--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "php": ">=7.4",
         "tecnickcom/tc-lib-pdf":"*",
-        "tecnickcom/tcpdf": "^6.4"     
+        "tecnickcom/tcpdf": "^6.4",
+        "fakerphp/faker": "^1.17"         
     },
     "autoload": {
         "psr-4": {
