--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": ">=7.4",
         "tecnickcom/tc-lib-pdf":"*",
         "tecnickcom/tcpdf": "^6.4",
-        "fakerphp/faker": "^1.17"         
+        "fakerphp/faker": "^1.17",
+        "phpoffice/phpspreadsheet": "^1.20"         
     },
     "autoload": {
         "psr-4": {
